# clawSearXNG

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: engines.yaml
src/ai_search/: __init__.py  config.py  main.py  models.py
src/ai_search/pipeline/: __init__.py  orchestrator.py  stage0_cache.py  stage1_intel.py  stage2_router.py  stage3_fetch.py  stage4a_coarse.py  stage4b_rerank.py  stage5_return.py
src/ai_search/services/: __init__.py  claude.py  redis_client.py  searxng.py
src/ai_search/utils/: __init__.py  domain_weights.py  logging.py  url_utils.py
systemd/: ai-search.service
tests/: __init__.py  conftest.py  test_pipeline.py  test_rerank.py  test_searxng.py  test_stage1_intel.py
